save thomas fire subset

--- a/hwk4-task2-fire-perimeter-COHEN.ipynb
+++ b/hwk4-task2-fire-perimeter-COHEN.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "id": "f1649c91-2e61-4da3-988c-4860c1a2e13b",
    "metadata": {},
    "outputs": [],
@@ -35,9 +35,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bc11c437-c032-4fda-8ebb-f13a600a8b97",
+   "metadata": {},
+   "source": [
+    "## Data Cleaning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "72082715-5e9e-47b5-b3c9-1bb561555547",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Make columns lowercase\n",
+    "fire_perim.columns = fire_perim.columns.str.lower()\n",
+    "\n",
+    "# Tunicate underscore from year col\n",
+    "fire_perim = fire_perim.rename(columns = {'year_': 'year'})\n",
+    "\n",
+    "# Make year col int\n",
+    "fire_perim['year'] = fire_perim['year'].astype('Int64')\n",
+    "\n",
+    "# Drop cols with NA in fire name\n",
+    "fire_perim = fire_perim.dropna(subset = 'fire_name')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16522df9-008b-4758-8070-0cc5535ea0ae",
+   "metadata": {},
+   "source": [
+    "# Fire Perimeter Data Summary\n",
+    "\n",
+    "write this later"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b4f345d1-237e-4ec4-97fb-c91de648bae5",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Subset for 2017 Thomas Fire\n",
+    "thomas_perim = fire_perim[(fire_perim['fire_name'].str.contains('THOMAS')) & \n",
+    "           (fire_perim['year'] == 2017)]\n",
+    "\n",
+    "# Save subset as .shp\n",
+    "thomas_perim.to_file('data/thomas_perim.shp')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa46ed3e-66ac-4b12-88c8-8b29dd3dc289",
+   "id": "120e2375-3fed-4ca4-b466-c6df962cd228",
    "metadata": {},
    "outputs": [],
    "source": []
