explain decision to save to shp

--- a/hwk4-task2-fire-perimeter-COHEN.ipynb
+++ b/hwk4-task2-fire-perimeter-COHEN.ipynb
@@ -92,9 +92,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "59465bb9-68b3-489c-96f8-4e47077833d7",
+   "metadata": {},
+   "source": [
+    "#### Why save to `.shp`?\n",
+    "\n",
+    "We are only looking to get a representation of the 2017 Thomas Fire. In otherwords, all we need is a polygon for the boundary containing attributes. Exporting to `.shp` is the fastest and simplest format to use. It is also good enough to any analyses needed when crossreferencing it with landsat NetCDF file."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "120e2375-3fed-4ca4-b466-c6df962cd228",
+   "id": "d6fdf2f4-4a63-4639-a922-38ce21cf9117",
    "metadata": {},
    "outputs": [],
    "source": []
