make thomas_perim.shp save to own folder

--- a/hwk4-task2-fire-perimeter-COHEN.ipynb
+++ b/hwk4-task2-fire-perimeter-COHEN.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "b4f345d1-237e-4ec4-97fb-c91de648bae5",
    "metadata": {
     "tags": []
@@ -87,8 +87,12 @@
     "thomas_perim = fire_perim[(fire_perim['fire_name'].str.contains('THOMAS')) & \n",
     "           (fire_perim['year'] == 2017)]\n",
     "\n",
+    "# Make folder to save shapefile\n",
+    "if not os.path.exists('data/thomas_perim'):\n",
+    "    os.makedirs('data/thomas_perim')\n",
+    "\n",
     "# Save subset as .shp\n",
-    "thomas_perim.to_file('data/thomas_perim.shp')"
+    "thomas_perim.to_file('data/thomas_perim/thomas_perim.shp')"
    ]
   },
   {
