write data summary

--- a/hwk4-task2-fire-perimeter-COHEN.ipynb
+++ b/hwk4-task2-fire-perimeter-COHEN.ipynb
@@ -54,6 +54,9 @@
     "# Make columns lowercase\n",
     "fire_perim.columns = fire_perim.columns.str.lower()\n",
     "\n",
+    "# Make values lowercase\n",
+    "fire_perim = fire_perim.map(lambda x: x.lower() if type(x) == str else x)\n",
+    "\n",
     "# Tunicate underscore from year col\n",
     "fire_perim = fire_perim.rename(columns = {'year_': 'year'})\n",
     "\n",
@@ -66,17 +69,296 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16522df9-008b-4758-8070-0cc5535ea0ae",
-   "metadata": {},
+   "id": "a5acef0c-7a22-47bc-a489-1fa995161018",
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "# Fire Perimeter Data Summary\n",
-    "\n",
-    "write this later"
+    "## Preliminary Data Exploration"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
+   "id": "6f825fa5-f5b5-4e6c-88f2-175464bf5eb2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>objectid</th>\n",
+       "      <th>year</th>\n",
+       "      <th>state</th>\n",
+       "      <th>agency</th>\n",
+       "      <th>unit_id</th>\n",
+       "      <th>fire_name</th>\n",
+       "      <th>inc_num</th>\n",
+       "      <th>alarm_date</th>\n",
+       "      <th>cont_date</th>\n",
+       "      <th>cause</th>\n",
+       "      <th>...</th>\n",
+       "      <th>gis_acres</th>\n",
+       "      <th>comments</th>\n",
+       "      <th>complex_na</th>\n",
+       "      <th>irwinid</th>\n",
+       "      <th>fire_num</th>\n",
+       "      <th>complex_id</th>\n",
+       "      <th>decades</th>\n",
+       "      <th>shape__are</th>\n",
+       "      <th>shape__len</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>cdf</td>\n",
+       "      <td>sku</td>\n",
+       "      <td>whitworth</td>\n",
+       "      <td>00004808</td>\n",
+       "      <td>2023-06-17</td>\n",
+       "      <td>2023-06-17</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.729125</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>{7985848c-0ac2-4ba4-8f0e-29f778652e61}</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2020.0</td>\n",
+       "      <td>41407.839844</td>\n",
+       "      <td>1247.166034</td>\n",
+       "      <td>POLYGON ((-13682443.000 5091132.739, -13682445...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>lra</td>\n",
+       "      <td>btu</td>\n",
+       "      <td>kaiser</td>\n",
+       "      <td>00010225</td>\n",
+       "      <td>2023-06-02</td>\n",
+       "      <td>2023-06-02</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>13.602380</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>{43ebcc88-b3ac-48eb-8ef5-417fe0939ccf}</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2020.0</td>\n",
+       "      <td>93455.878906</td>\n",
+       "      <td>1285.514550</td>\n",
+       "      <td>POLYGON ((-13576727.142 4841226.161, -13576726...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>cdf</td>\n",
+       "      <td>aeu</td>\n",
+       "      <td>jackson</td>\n",
+       "      <td>00017640</td>\n",
+       "      <td>2023-07-01</td>\n",
+       "      <td>2023-07-02</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>27.814460</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>{b64e1355-bf1d-441a-95d0-bc1fbb93483b}</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2020.0</td>\n",
+       "      <td>183028.500000</td>\n",
+       "      <td>2697.587429</td>\n",
+       "      <td>POLYGON ((-13459243.000 4621236.000, -13458968...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   objectid  year state agency unit_id  fire_name   inc_num  alarm_date  \\\n",
+       "0         1  2023    ca    cdf     sku  whitworth  00004808  2023-06-17   \n",
+       "1         2  2023    ca    lra     btu     kaiser  00010225  2023-06-02   \n",
+       "2         3  2023    ca    cdf     aeu    jackson  00017640  2023-07-01   \n",
+       "\n",
+       "    cont_date  cause  ...  gis_acres  comments  complex_na  \\\n",
+       "0  2023-06-17    5.0  ...   5.729125      None        None   \n",
+       "1  2023-06-02    5.0  ...  13.602380      None        None   \n",
+       "2  2023-07-02    2.0  ...  27.814460      None        None   \n",
+       "\n",
+       "                                  irwinid fire_num complex_id decades  \\\n",
+       "0  {7985848c-0ac2-4ba4-8f0e-29f778652e61}     None       None  2020.0   \n",
+       "1  {43ebcc88-b3ac-48eb-8ef5-417fe0939ccf}     None       None  2020.0   \n",
+       "2  {b64e1355-bf1d-441a-95d0-bc1fbb93483b}     None       None  2020.0   \n",
+       "\n",
+       "      shape__are   shape__len  \\\n",
+       "0   41407.839844  1247.166034   \n",
+       "1   93455.878906  1285.514550   \n",
+       "2  183028.500000  2697.587429   \n",
+       "\n",
+       "                                            geometry  \n",
+       "0  POLYGON ((-13682443.000 5091132.739, -13682445...  \n",
+       "1  POLYGON ((-13576727.142 4841226.161, -13576726...  \n",
+       "2  POLYGON ((-13459243.000 4621236.000, -13458968...  \n",
+       "\n",
+       "[3 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fire_perim.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "16d10b53-28c8-4f6e-b197-6b0ed5ba90b9",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset info: \n",
+      "<class 'geopandas.geodataframe.GeoDataFrame'>\n",
+      "Index: 15672 entries, 0 to 22260\n",
+      "Data columns (total 22 columns):\n",
+      " #   Column      Non-Null Count  Dtype   \n",
+      "---  ------      --------------  -----   \n",
+      " 0   objectid    15672 non-null  int64   \n",
+      " 1   year        15602 non-null  Int64   \n",
+      " 2   state       15672 non-null  object  \n",
+      " 3   agency      15667 non-null  object  \n",
+      " 4   unit_id     15653 non-null  object  \n",
+      " 5   fire_name   15672 non-null  object  \n",
+      " 6   inc_num     15005 non-null  object  \n",
+      " 7   alarm_date  15150 non-null  object  \n",
+      " 8   cont_date   9123 non-null   object  \n",
+      " 9   cause       15658 non-null  float64 \n",
+      " 10  c_method    9329 non-null   float64 \n",
+      " 11  objective   15498 non-null  float64 \n",
+      " 12  gis_acres   15672 non-null  float64 \n",
+      " 13  comments    2191 non-null   object  \n",
+      " 14  complex_na  596 non-null    object  \n",
+      " 15  irwinid     2695 non-null   object  \n",
+      " 16  fire_num    10696 non-null  object  \n",
+      " 17  complex_id  360 non-null    object  \n",
+      " 18  decades     15602 non-null  float64 \n",
+      " 19  shape__are  15672 non-null  float64 \n",
+      " 20  shape__len  15672 non-null  float64 \n",
+      " 21  geometry    15672 non-null  geometry\n",
+      "dtypes: Int64(1), float64(7), geometry(1), int64(1), object(12)\n",
+      "memory usage: 2.8+ MB\n",
+      "None \n",
+      "\n",
+      "Earliest year in dataset:  1898 \n",
+      "\n",
+      "Number of fires:  9107 \n",
+      "\n",
+      "Number of rows for 2017 Thomas Fire:  1 \n",
+      "\n",
+      "CRS: \n",
+      "Is projected?:  True\n",
+      "Is geographic?:  False \n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Projected CRS: PROJCS[\"WGS_1984_Web_Mercator_Auxiliary_Sphere\",GE ...>\n",
+       "Name: WGS_1984_Web_Mercator_Auxiliary_Sphere\n",
+       "Axis Info [cartesian]:\n",
+       "- [east]: Easting (Meter)\n",
+       "- [north]: Northing (Meter)\n",
+       "Area of Use:\n",
+       "- undefined\n",
+       "Coordinate Operation:\n",
+       "- name: unnamed\n",
+       "- method: Popular Visualisation Pseudo Mercator\n",
+       "Datum: World Geodetic System 1984\n",
+       "- Ellipsoid: WGS 84\n",
+       "- Prime Meridian: Greenwich"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Column numbers and names, null counts and dtypes\n",
+    "print('Dataset info: ')\n",
+    "print(fire_perim.info(), '\\n')\n",
+    "\n",
+    "# Min value in year column\n",
+    "print('Earliest year in dataset: ', int(fire_perim['year'].min()), '\\n')\n",
+    "\n",
+    "# Number of unique values in fire name column\n",
+    "print('Number of fires: ', fire_perim['fire_name'].nunique(), '\\n')\n",
+    "\n",
+    "# Number of rows for Thomas fire in 2017\n",
+    "print('Number of rows for 2017 Thomas Fire: ', fire_perim[(fire_perim['fire_name'].str.contains('thomas')) & \n",
+    "           (fire_perim['year'] == 2017)].shape[0], '\\n')\n",
+    "\n",
+    "# CRS info\n",
+    "print('CRS: ') \n",
+    "print('Is projected?: ', fire_perim.crs.is_projected)\n",
+    "print('Is geographic?: ', fire_perim.crs.is_geographic, '\\n')\n",
+    "fire_perim.crs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a10d91ba-4912-480c-9ca2-68e9f74faab4",
+   "metadata": {},
+   "source": [
+    "# Fire Perimeter Data Summary\n",
+    "\n",
+    "This California Fire Perimeters shapefile contains 22261 rows and 21 columns, the ones relevant to our analysis being `year` and `fire_name`. There are 9108 fires in it, with the oldest one being dated year 1878. It's CRS is WGS 1984, but a version that is projected with a meter unit. There is only one row for Thomas Fire in the year 2017."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "b4f345d1-237e-4ec4-97fb-c91de648bae5",
    "metadata": {
     "tags": []
@@ -84,7 +366,7 @@
    "outputs": [],
    "source": [
     "# Subset for 2017 Thomas Fire\n",
-    "thomas_perim = fire_perim[(fire_perim['fire_name'].str.contains('THOMAS')) & \n",
+    "thomas_perim = fire_perim[(fire_perim['fire_name'].str.contains('thomas')) & \n",
     "           (fire_perim['year'] == 2017)]\n",
     "\n",
     "# Make folder to save shapefile\n",
@@ -104,14 +386,6 @@
     "\n",
     "We are only looking to get a representation of the 2017 Thomas Fire. In otherwords, all we need is a polygon for the boundary containing attributes. Exporting to `.shp` is the fastest and simplest format to use. It is also good enough to any analyses needed when crossreferencing it with landsat NetCDF file."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d6fdf2f4-4a63-4639-a922-38ce21cf9117",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
