update formatting and increase professionalism

--- a/hwk4-task2-fire-perimeter-COHEN.ipynb
+++ b/hwk4-task2-fire-perimeter-COHEN.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "6e5b96e3-6822-4487-8974-9f7e8a692acb",
+   "metadata": {},
+   "source": [
+    "# Thomas Fire 2017 Fire Perimeter\n",
+    "\n",
+    "This document contains the loading, cleaning, exploration, and subsetting of the *California Historical Fire Perimeters* dataset acquired from [California Natural Resources Agency](https://gis.data.cnra.ca.gov/maps/CALFIRE-Forestry::california-historical-fire-perimeters/about). The goal is to extract the 2017 Thomas Fire that burned in Ventura and Santa Barbara counties."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "facadfcd-20d8-43d4-ad43-5e8c527f08e6",
    "metadata": {},
    "source": [
@@ -19,7 +29,6 @@
     "import pandas as pd\n",
     "import os\n",
     "import matplotlib.pyplot as plt\n",
-    "import datetime\n",
     "\n",
     "os.environ['PROJ_LIB'] = '/opt/anaconda3/share/proj'\n",
     "\n",
@@ -39,7 +48,9 @@
    "id": "bc11c437-c032-4fda-8ebb-f13a600a8b97",
    "metadata": {},
    "source": [
-    "## Data Cleaning"
+    "## Cleaning\n",
+    "\n",
+    "By removing NA's, simplifying column names, and making all values lowercase, subsetting become's easier and is done with higher confidence."
    ]
   },
   {
@@ -351,9 +362,19 @@
    "id": "a10d91ba-4912-480c-9ca2-68e9f74faab4",
    "metadata": {},
    "source": [
-    "# Fire Perimeter Data Summary\n",
+    "### Fire Perimeter Data Summary\n",
     "\n",
     "This California Fire Perimeters shapefile contains 22261 rows and 21 columns, the ones relevant to our analysis being `year` and `fire_name`. There are 9108 fires in it, with the oldest one being dated year 1878. It's CRS is WGS 1984, but a version that is projected with a meter unit. There is only one row for Thomas Fire in the year 2017."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d2b8bfd-fc5a-4e0f-a696-fc65f1831235",
+   "metadata": {},
+   "source": [
+    "## Subset and Save\n",
+    "\n",
+    "Subset for the 2017 Thomas Fire record and save to `.shp` format."
    ]
   },
   {
