complete step 6, clean notebooks, write about section

--- a/hwk4-task2-fire-perimeter-COHEN.ipynb
+++ b/hwk4-task2-fire-perimeter-COHEN.ipynb
@@ -2,12 +2,64 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6e5b96e3-6822-4487-8974-9f7e8a692acb",
+   "id": "a6ef36f8-8655-492e-954a-0a267fd58c6a",
    "metadata": {},
    "source": [
     "# Thomas Fire 2017 Fire Perimeter\n",
     "\n",
-    "This document contains the loading, cleaning, exploration, and subsetting of the *California Historical Fire Perimeters* dataset acquired from [California Natural Resources Agency](https://gis.data.cnra.ca.gov/maps/CALFIRE-Forestry::california-historical-fire-perimeters/about). The goal is to extract the 2017 Thomas Fire that burned in Ventura and Santa Barbara counties."
+    "### *Author*: Joshua Paul Cohen\n",
+    "\n",
+    "#### *GitHub Repository*: https://github.com/silkieMoth/eds220-hwk4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd50ac9b-f5a4-4f77-937f-308881f479c4",
+   "metadata": {},
+   "source": [
+    "## About\n",
+    "\n",
+    "### Purpose\n",
+    "\n",
+    "The goal is to extract the 2017 Thomas Fire that burned in Ventura and Santa Barbara counties.\n",
+    "\n",
+    "\n",
+    "### Analysis Highlights\n",
+    "\n",
+    "- Preliminary exploration of the fire perimeter shapefile and proceeding summary.\n",
+    "    - Data contains `year` and `fire_name` column.\n",
+    "    - CRS is WGS 1984.\n",
+    "    - CRS is projected.\n",
+    "- Saving subset of 2017 Thomas Fire to new shapefile.\n",
+    "    - Filtered for all fire names with 'thomas' and all years with 2017.\n",
+    "    - Only one row returned based on these selections.\n",
+    "\n",
+    "\n",
+    "### Dataset Description\n",
+    "\n",
+    "- `California_Fire_Perimeters_(1950%2B).shp`\n",
+    "    - Data on fires dating back to 1898.\n",
+    "    - Contains columns for:\n",
+    "        - Year\n",
+    "        - State\n",
+    "        - Name of the fire\n",
+    "        - Agency responding to the fire\n",
+    "        - Fire discovery date\n",
+    "        - Containment date\n",
+    "        - Cause of fire\n",
+    "        - Perimeter data collection method\n",
+    "        - Fire response tactic\n",
+    "        - Perimeter area\n",
+    "        - Number according to historical numbering system for fires\n",
+    "    - Over 15000 entries.\n",
+    "    - Each row cooresponds to single polygon representing a perimeter for a given fire.\n",
+    "\n",
+    "\n",
+    "### References to Datasets\n",
+    "\n",
+    "The *California Historical Fire Perimeters* dataset was acquired from [California Natural Resources Agency](https://gis.data.cnra.ca.gov/maps/CALFIRE-Forestry::california-historical-fire-perimeters/about).\n",
+    "\n",
+    "    California Department of Forestry and Fire Protection (2024), California Historical Fire Perimeters [dataset]. California Natural Resources Agency.\n"
    ]
   },
   {
@@ -85,7 +137,17 @@
     "tags": []
    },
    "source": [
-    "## Preliminary Data Exploration"
+    "## Preliminary Data Exploration\n",
+    "\n",
+    "#### Obtaining this infomation:\n",
+    "- Column names\n",
+    "- Data types\n",
+    "- Minimum year in dataset\n",
+    "- Total number of fires\n",
+    "- Number of rows that fulfil subset condition\n",
+    "- CRS\n",
+    "    - Value\n",
+    "    - Projected or geographic"
    ]
   },
   {
@@ -302,7 +364,7 @@
       "\n",
       "Earliest year in dataset:  1898 \n",
       "\n",
-      "Number of fires:  9107 \n",
+      "Number of fires:  15672 \n",
       "\n",
       "Number of rows for 2017 Thomas Fire:  1 \n",
       "\n",
@@ -344,7 +406,7 @@
     "print('Earliest year in dataset: ', int(fire_perim['year'].min()), '\\n')\n",
     "\n",
     "# Number of unique values in fire name column\n",
-    "print('Number of fires: ', fire_perim['fire_name'].nunique(), '\\n')\n",
+    "print('Number of fires: ', fire_perim.shape[0], '\\n')\n",
     "\n",
     "# Number of rows for Thomas fire in 2017\n",
     "print('Number of rows for 2017 Thomas Fire: ', fire_perim[(fire_perim['fire_name'].str.contains('thomas')) & \n",
